// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Imagen test Renderiza Componente Por Url invalida 1`] = `
<div
  className="container"
>
  <div
    className="fila"
  >
    <div
      className="containerEstandarInput"
    >
      <label
        className="labelEstandarInput"
      />
      <div
        className="sombraConAutocompletado"
      >
        <input
          className="estandarInput"
          name="url"
          onChange={[Function]}
          placeholder="Insertar https://"
          required={true}
          type="text"
        />
      </div>
    </div>
    <div
      className="containerDropInput"
    >
      <label
        className="labelDropInput"
      />
      <div
        className="cityContainer divDrawer"
      >
        <input
          autoComplete="off"
          className="input"
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Descripción"
          type="text"
        />
      </div>
    </div>
    <div
      className="containerButton"
    >
      <div
        className="containerBotones"
      >
        <button
          className="add"
          disabled={true}
          onClick={[Function]}
        >
          <i
            className="fas fa-check"
          />
        </button>
        <button
          className="delete"
          onClick={[Function]}
        >
          <i
            className="fas fa-times"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="invalidURL"
  >
    <i
      className="fas fa-exclamation-triangle"
    />
    <p>
      La URL ingresada no es una imagen
    </p>
  </div>
</div>
`;

exports[`Imagen test Renderiza Componente Por default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="fila"
        >
          <div
            class="containerEstandarInput"
          >
            <label
              class="labelEstandarInput"
            />
            <div
              class="sombraConAutocompletado"
            >
              <input
                class="estandarInput"
                name="url"
                placeholder="Insertar https://"
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="containerDropInput"
          >
            <label
              class="labelDropInput"
            />
            <div
              class="cityContainer divDrawer"
            >
              
              <input
                autocomplete="off"
                class="input"
                placeholder="Descripción"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="containerButton"
          >
            <div
              class="containerBotones"
            >
              <button
                class="add"
                disabled=""
              >
                <i
                  class="fas fa-check"
                />
              </button>
              <button
                class="add"
              >
                <i
                  class="fas fa-plus"
                />
              </button>
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="fila"
      >
        <div
          class="containerEstandarInput"
        >
          <label
            class="labelEstandarInput"
          />
          <div
            class="sombraConAutocompletado"
          >
            <input
              class="estandarInput"
              name="url"
              placeholder="Insertar https://"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="containerDropInput"
        >
          <label
            class="labelDropInput"
          />
          <div
            class="cityContainer divDrawer"
          >
            
            <input
              autocomplete="off"
              class="input"
              placeholder="Descripción"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="containerButton"
        >
          <div
            class="containerBotones"
          >
            <button
              class="add"
              disabled=""
            >
              <i
                class="fas fa-check"
              />
            </button>
            <button
              class="add"
            >
              <i
                class="fas fa-plus"
              />
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Imagen test Renderiza Componente Por index.not0 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="fila"
        >
          <div
            class="containerEstandarInput"
          >
            <label
              class="labelEstandarInput"
            />
            <div
              class="sombraConAutocompletado"
            >
              <input
                class="estandarInput"
                name="url"
                placeholder="Insertar https://"
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="containerDropInput"
          >
            <label
              class="labelDropInput"
            />
            <div
              class="cityContainer divDrawer"
            >
              
              <input
                autocomplete="off"
                class="input"
                placeholder="Descripción"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="containerButton"
          >
            <div
              class="containerBotones"
            >
              <button
                class="add"
                disabled=""
              >
                <i
                  class="fas fa-check"
                />
              </button>
              <button
                class="delete"
              >
                <i
                  class="fas fa-times"
                />
              </button>
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="fila"
      >
        <div
          class="containerEstandarInput"
        >
          <label
            class="labelEstandarInput"
          />
          <div
            class="sombraConAutocompletado"
          >
            <input
              class="estandarInput"
              name="url"
              placeholder="Insertar https://"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="containerDropInput"
        >
          <label
            class="labelDropInput"
          />
          <div
            class="cityContainer divDrawer"
          >
            
            <input
              autocomplete="off"
              class="input"
              placeholder="Descripción"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="containerButton"
        >
          <div
            class="containerBotones"
          >
            <button
              class="add"
              disabled=""
            >
              <i
                class="fas fa-check"
              />
            </button>
            <button
              class="delete"
            >
              <i
                class="fas fa-times"
              />
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
